--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -64,12 +64,8 @@
     </div>
 </main>
 
-<footer class="footer-container">
-    <div class="footer">
-        <p>
-            <a href="https://mahocommerce.com" target="_blank" rel="noopener">Powered by Maho <?= Mage::getVersion() ?></a>
-        </p>
-    </div>
+<footer>
+    <a href="https://mahocommerce.com" target="_blank" rel="noopener">Powered by Maho <?= Mage::getVersion() ?></a>
 </footer>
 
 <script src="<?= $this->getSkinUrl('js/installer.js') ?>"></script>
