--- a/app/design/install/default/default/template/install/locale.phtml
+++ b/app/design/install/default/default/template/install/locale.phtml
@@ -23,15 +23,15 @@
 <div class="form-list">
     <ul>
         <li>
-            <label for="locale"><?= $this->__('Locale') ?> <span class="required">*</span></label>
+            <label for="locale"><?= $this->__('Locale') ?></label>
             <?= $this->getLocaleSelect() ?>
         </li>
         <li>
-            <label for="timezone"><?= $this->__('Time Zone') ?> <span class="required">*</span></label>
+            <label for="timezone"><?= $this->__('Time Zone') ?></label>
             <?= $this->getTimezoneSelect() ?>
         </li>
         <li>
-            <label for="currency"><?= $this->__('Default Currency') ?> <span class="required">*</span></label>
+            <label for="currency"><?= $this->__('Default Currency') ?></label>
             <?= $this->getCurrencySelect() ?>
         </li>
     </ul>
