--- a/app/design/install/default/default/template/install/db/mysql.phtml
+++ b/app/design/install/default/default/template/install/db/mysql.phtml
@@ -17,18 +17,18 @@
  */
 ?>
 <li>
-    <label for="host"><?= $this->__('Host') ?> <span class="required">*</span></label>
+    <label for="host"><?= $this->__('Host') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_host]" id="host" value="<?= $this->getFormData()->getDbHost() ?>" title="<?= $this->quoteEscape($this->__('Database host')) ?>" class="input-text" required>
     <p class="field-note">
         <?= $this->__('You can specify server port, ex.: localhost:3307<br>If you are not using default UNIX socket, you can specify it here instead of host, ex.: /var/run/mysqld/mysqld.sock') ?>
     </p>
 </li>
 <li>
-    <label for="dbname"><?= $this->__('Database Name') ?> <span class="required">*</span></label>
+    <label for="dbname"><?= $this->__('Database Name') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_name]" id="dbname" value="<?= $this->getFormData()->getDbName() ?>" title="<?= $this->quoteEscape($this->__('Database Name')) ?>" class="input-text" required>
 </li>
 <li>
-    <label for="user"><?= $this->__('User Name') ?> <span class="required">*</span></label>
+    <label for="user"><?= $this->__('User Name') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_user]" id="user" value="<?= $this->getFormData()->getDbUser() ?>" title="<?= $this->quoteEscape($this->__('Database user name')) ?>" class="input-text" required>
 </li>
 <li>
