--- a/app/design/install/default/default/template/install/db/pgsql.phtml
+++ b/app/design/install/default/default/template/install/db/pgsql.phtml
@@ -15,18 +15,18 @@
  */
 ?>
 <li>
-    <label for="host"><?= $this->__('Host') ?> <span class="required">*</span></label>
+    <label for="host"><?= $this->__('Host') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_host]" id="host" value="<?= $this->getFormData()->getDbHost() ?: 'localhost' ?>" title="<?= $this->quoteEscape($this->__('Database host')) ?>" class="input-text" required>
     <p class="field-note">
         <?= $this->__('You can specify server port, ex.: localhost:5432') ?>
     </p>
 </li>
 <li>
-    <label for="dbname"><?= $this->__('Database Name') ?> <span class="required">*</span></label>
+    <label for="dbname"><?= $this->__('Database Name') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_name]" id="dbname" value="<?= $this->getFormData()->getDbName() ?>" title="<?= $this->quoteEscape($this->__('Database Name')) ?>" class="input-text" required>
 </li>
 <li>
-    <label for="user"><?= $this->__('User Name') ?> <span class="required">*</span></label>
+    <label for="user"><?= $this->__('User Name') ?></label>
     <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_user]" id="user" value="<?= $this->getFormData()->getDbUser() ?: 'postgres' ?>" title="<?= $this->quoteEscape($this->__('Database user name')) ?>" class="input-text" required>
 </li>
 <li>
