Simplify gift card configuration and make barcode package optional
- Move picqer/php-barcode-generator from require to suggest in composer.json
- Add frontend model to show warning when barcode package not installed
- Simplify system.xml: remove redundant comments, merge QR/barcode settings
- Remove unused send_on_creation config (auto-send when email provided)
- Auto-send gift card email only when recipient email is provided
- Clean up PDF template to use helper methods directly

--- a/app/design/adminhtml/default/default/template/maho/giftcard/pdf/giftcard.phtml
+++ b/app/design/adminhtml/default/default/template/maho/giftcard/pdf/giftcard.phtml
@@ -208,11 +208,8 @@ $giftcards = $this->getGiftcards();
 
                 <?php
                 $helper = Mage::helper('giftcard');
-                $showQrInPdf = Mage::getStoreConfigFlag('giftcard/general/pdf_show_qrcode');
-                $showBarcodeInPdf = Mage::getStoreConfigFlag('giftcard/general/pdf_show_barcode');
-
-                $qrCode = $showQrInPdf ? $helper->getQrCodeDataUrl($giftcard->getCode(), 150) : '';
-                $barcode = $showBarcodeInPdf ? $helper->getBarcodeDataUrl($giftcard->getCode()) : '';
+                $qrCode = $helper->getQrCodeDataUrl($giftcard->getCode(), 150);
+                $barcode = $helper->getBarcodeDataUrl($giftcard->getCode());
                 ?>
 
                 <?php if ($qrCode): ?>
