--- a/app/design/install/default/default/template/install/begin.phtml
+++ b/app/design/install/default/default/template/install/begin.phtml
@@ -28,7 +28,12 @@
         </div>
 
         <label for="agree" class="checkbox-label">
-            <input type="checkbox" name="agree" value="1" id="agree" aria-describedby="licenseBox" required>
+            <input type="checkbox"
+                   name="agree"
+                   value="1"
+                   id="agree"
+                   aria-describedby="licenseBox"
+                   required>
             <span><?= $this->__('I agree to the above terms and conditions.') ?></span>
         </label>
 
