--- a/app/design/install/default/default/template/install/db/sqlite.phtml
+++ b/app/design/install/default/default/template/install/db/sqlite.phtml
@@ -16,14 +16,25 @@
 ?>
 <li>
     <label for="sqlite_db_path"><?= $this->__('Database File Path') ?></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_name]" id="sqlite_db_path" value="<?= $this->getFormData()->getDbName() ?: 'maho.sqlite' ?>" title="<?= $this->quoteEscape($this->__('Database File Path')) ?>" class="input-text" required>
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix()?>][db_name]"
+           id="sqlite_db_path"
+           value="<?= $this->getFormData()->getDbName() ?: 'maho.sqlite' ?>"
+           title="<?= $this->quoteEscape($this->__('Database File Path')) ?>"
+           class="input-text"
+           required>
     <p class="field-note">
         <?= $this->__('Relative path from var/db/ directory, or absolute path, or :memory: for in-memory database') ?>
     </p>
 </li>
 <li>
     <label for="sqlite_prefix"><?= $this->__('Tables Prefix') ?></label>
-    <input type="text" name="connection[<?= $this->getIdPrefix()?>][db_prefix]" id="sqlite_prefix" value="<?= $this->getFormData()->getDbPrefix() ?>" title="<?= $this->quoteEscape($this->__('Tables Prefix')) ?>" class="input-text">
+    <input type="text"
+           name="connection[<?= $this->getIdPrefix()?>][db_prefix]"
+           id="sqlite_prefix"
+           value="<?= $this->getFormData()->getDbPrefix() ?>"
+           title="<?= $this->quoteEscape($this->__('Tables Prefix')) ?>"
+           class="input-text">
     <p class="field-note">
         <?= $this->__('(Optional. Leave blank for no prefix)') ?>
     </p>
