fix(installer): Set footer width to 100% for last installer step

--- a/public/skin/install/default/default/css/installer.css
+++ b/public/skin/install/default/default/css/installer.css
@@ -193,6 +193,7 @@ footer {
     padding: var(--space-xl);
     text-align: center;
     font-size: var(--font-size-sm);
+    width: 100%;
 }
 
 footer a {
