--- a/app/design/install/default/default/template/install/create_admin.phtml
+++ b/app/design/install/default/default/template/install/create_admin.phtml
@@ -106,7 +106,7 @@
     </div>
 </div>
 
-<script>
+<script type="module">
     document.getElementById('form-validate')?.addEventListener('submit', function() {
         if (this.checkValidity()) {
             document.getElementById('installation-overlay').style.display = 'flex';
