--- a/app/design/install/default/default/template/install/db/main.phtml
+++ b/app/design/install/default/default/template/install/db/main.phtml
@@ -46,7 +46,7 @@
     </ul>
 </div>
 
-<script>
+<script type="module">
     const dbEngineSelect = document.querySelector('#db_engine_select');
 
     dbEngineSelect?.addEventListener('change', () => {
