--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -68,6 +68,6 @@
     <a href="https://mahocommerce.com" target="_blank" rel="noopener">Powered by Maho <?= Mage::getVersion() ?></a>
 </footer>
 
-<script src="<?= $this->getSkinUrl('js/installer.js') ?>"></script>
+<script type="module" src="<?= $this->getSkinUrl('js/installer.js') ?>"></script>
 </body>
 </html>
