--- a/app/design/install/default/default/template/install/config.phtml
+++ b/app/design/install/default/default/template/install/config.phtml
@@ -31,7 +31,7 @@
                    name="config[unsecure_base_url]"
                    id="base_url"
                    value="<?= $this->getFormData()->getUnsecureBaseUrl() ?>"
-                   title="<?= $this->quoteEscape($this->__('Base URL')) ?>"
+                   title="<?= $this->quoteEscape($this->__('URL must end with a trailing slash (/)')) ?>"
                    class="input-text"
                    pattern=".*\/$"
                    required>
@@ -70,7 +70,7 @@
                    name="config[secure_base_url]"
                    id="secure_base_url"
                    value="<?= $this->getFormData()->getSecureBaseUrl() ?>"
-                   title="<?= $this->quoteEscape($this->__('Secure Base URL')) ?>"
+                   title="<?= $this->quoteEscape($this->__('URL must end with a trailing slash (/)')) ?>"
                    class="input-text"
                    pattern=".*\/$"
                    required>
@@ -115,7 +115,7 @@
     </div>
 </div>
 
-<script>
+<script type="module">
     // Ensure trailing slash at the end of (secure) base url
     document.querySelectorAll('input[type="url"]').forEach(baseUrlInput => {
         baseUrlInput.addEventListener('blur', () => {
